# poc-cabal-data-files

./: CHANGELOG.md  poc-cabal-data-files.cabal  readme.org
app/: Main.hs  Paths.hs
data/: poc-cabal-data-file-1.txt
