cabal-version:      2.4
name:               poc-cabal-data-files
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             HW home
maintainer:         freizl@gmail.com

-- A copyright notice.
-- copyright:
-- category:

data-files:
  data/poc-cabal-data-file-1.txt

extra-doc-files:
  readme.org
  CHANGELOG.md

-- extra-source-files:

executable poc-cabal-data-files
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                    , directory
    other-modules:    Paths_poc_cabal_data_files
    hs-source-dirs:   app
    default-language: Haskell2010
